Name:                cabal-file-th
Version:             0.1
Synopsis:            Template haskell expressions for substituting fields from a project's cabal file into source.
Homepage:            http://github.com/nkpart/cabal-file-th
License:             BSD3
License-file:        LICENSE
Author:              Nick Partridge
Maintainer:          nkpart@gmail.com
Category:            Development
Build-type:          Simple
Extra-source-files:  README.md
Cabal-version:       >= 1.9

Library
  Exposed-modules:   Distribution.PackageDescription.TH
  Build-depends:     base >= 4 && < 5,
                     Cabal >= 1.10 && < 1.11,
                     directory,
                     template-haskell
  Ghc-options: -Wall
  
Test-suite test
  Main-is:  Test.hs
  Hs-source-dirs:    test
  Type:     exitcode-stdio-1.0
  Build-depends: base >= 4 && < 5,
                 cabal-file-th

